# ISM

./: .env  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.yaml  default.config.toml  development.config.toml
.cargo/: audit.toml
.claude/: settings.json
.claude/commands/: migrate.md  new-broadcast-event.md  new-endpoint.md
.claude/rules/: broadcast.md  handlers.md  migrations.md  pagination.md  repository.md
.docs/: location-presence-sharing.md  pagination-frontend-migration.md  streaming-migration-frontend.md  streaming-sequencing.md  timeline-senders-frontend-migration.md
.github/workflows/: cd.yml  check-branch.yml  ci.yml  pipeline.yml  security.yml
.sqlx/: query-015f0e7be83c3880d8c7395c0fa807800a3d7c97fdc823e88432052fa51eab2b.json  query-08a8720e1a0ddacd02b9ff70590bcb82a0c51f864ee0dfbe47c7cc141f336f5a.json  query-1118e948abb60fa5092a96ac82a3d104679eb435d1d7be800151e9d4020ace26.json  query-1bac9a1eafb7d6bb22f1362563f2846a88e73129c1d29529416534ec6893c0dc.json  query-1ed4c19fd3f710e493cf0b694f2c0e8ec186f1743aeb6576bc8687b6666d0346.json  query-1f95cae6b493ecbef10347905171d91cb9adca4e030fafcd9dadd3da270440e8.json  query-21626f8b85b018fe7982b1628fdf0d9b5cec1b0fc8a3aaed7c40b190c8bccb8d.json  query-2229866d81255653e5d64409839045bca87a71d0eac5d691d92331e5a2bb8e61.json  query-2381494a89397b95facf36695ff7b32220b3150c2e30d6fc97da9c25400483c0.json  query-2655a4f7a524b25d411b5509b7396623c4c86c3769fc349d59dab3b498aeeed3.json  query-28a200c7e054dbc2fcac4d1da320bfe93ac94f3a6d35ab26db2d5b6a5bfeeb93.json  query-2db5eb40e575583b817f371a4337c26a18cdb9878c8e395510cc3c0c14bcf0c6.json  query-2e6762847f9788d44f79b2a16538c422881e89fccd4536118b6f1d4efa8c59dc.json  query-2ea8a3008bd6e52e81dda3ffd723a97f499c2298a7c71b960070f066d90ea5bd.json  query-37785004b8ab6c15debbf8e3753b54217983997e932bbfdaf95695deebe342f9.json  query-3aaa9068f9e71cce0b23ce8db90da0cc12d275c79850b6349bb783c661003132.json  query-3cdb7869c622b1a72d81d09d8a7fef227e3f6f0e7e9e1d0d0b9899549fe2d415.json  query-4070a060d147a9c6ff7715a4fb9ba0f85c7725dfc02c89d0fca1b2ab7bcd3a98.json  query-496fd9236c60f80bdf0d627b6ac7b139df7e87f2143772245ce8c463e9ecaf59.json  query-4a571e9af27608388d0e88cbb4c4a4053b476890e251cd685e6d82f2cee83e51.json  query-5c696bc4666a38e853b092fa7e41dc6f0c3a0a1e29e9d103a133523d6fa40ac6.json  query-623f2b3cadcfca389e0374421897ec241a5967b89d589113cb28492133ef8d78.json  query-637e0d0a476c53431c7bac444d50465ef8673610590ae1488c0f4fd75604f7b2.json  query-63faf032c93dc723987b8a926da76627c07d75a2dc68e66a99e3c36e4e5ec01e.json  query-661f8c7e625cf453e9db0328031391f8641fbdd94e2b27090762b0461748f979.json  query-671cf49d8284c3cd4b18f2b672f2f34b5dff2c5cad02fa93f3631aedb83b68da.json  query-69faf49936069fe6d515d2cb5e225b27f3e0159f3a9184a69bb2b952bc589fa6.json  query-6c5af956fa375864bc06309fd94cdb6ff9d9eaa42b569a4d7b1506debe7d9c5e.json  query-6d2680f522240bce19a38a27a262e5d68293e3c1b17a7eb05a2c6929deb5d105.json  query-6e735ac66bb07d9341b24a095f96b0f74000963bb25cba70403275201fdd74ed.json  query-6ef1150e0062bf0d0c00856e150bce2ae6b9e215a1ff162de6b24285e00176d7.json  query-7628c8241aad128f1875a2123845e4e36859c99d08373def23f2b5ac5eab1143.json  query-7b4800b86a71704c3eee7b4dfdfa9f4c9721c44a00006b5668dd260e2584b116.json  query-7f47917671f04d1e1a56be07274c3ef08567d83e188f2eb3df75491b9c467d4e.json  query-7f843c0d0d650e1c9d4b69ed379728e222517da03b7881fa33fa93e111c3880a.json  query-83264c94deeee5544ff14bb0834b93f241c5065ab8f01f963e11f310adce4de8.json  query-877c718da80347805a1f09c4037fec86b9c06e4823190733792f009955e1a4fd.json  query-880728c09ffbad8a14258d0437dff6270e06aceaa4db5e38bf0919f186cda1dd.json  query-8cf5a54604a8adbd60f6a442656b1fe58536cc4ab24538807d8b94a7da31bf0b.json  query-938eb6b3892dd0fcaeff08076014148bf9f61bc5897fa24d5d3fdc95446b6f6e.json  (+31 more)
ISM-Golang/: .env  compose.yaml
ISM-Golang/src/: go.mod  go.sum  main.go
ISM-Rust/: Cargo.toml  compose.yaml  default.config.toml  development.config.toml
ISM-Rust/.sqlx/: query-1f9ff856156af4f6580b95a98c1d68f571468f2190cd6ecdf8694afda0aea0f3.json  query-3c4584419aec1c0fdeebb63306c1c7e153b617a86d7c0bd5c32d5d69a11b0e2e.json  query-5bd3f404de7ee2ed09daee854bfff0cfc15703c65efbba340235e742e116e31d.json  query-661f8c7e625cf453e9db0328031391f8641fbdd94e2b27090762b0461748f979.json  query-d0779c2f67e104b4387537026a1f6aba2f314490466d6994d515699cafd2ca2f.json  query-ef0bc634db8d7352ddcc7304d33aab794c368c2a413278f15d0be93492a08a11.json  query-fb86f1988d5973ca8ea474c1bdf98130ac8e7433cce9271a755fa83d5156591f.json
ISM-Rust/src/: lib.rs  main.rs
ISM-Rust/src/api/: errors.rs  event_broadcast.rs  mod.rs  notification.rs  request_handler.rs  router.rs
ISM-Rust/src/core/: config.rs  mod.rs
ISM-Rust/src/database/: message.rs  message_repository.rs  message_store.rs  mod.rs  room_repository.rs  user.rs  user_repository.rs
ISM-Rust/src/keycloak/: decode.rs  mod.rs  oidc_discovery.rs  service.rs
ISM-Rust/src/model/: message.rs  mod.rs  room.rs  user.rs
ISM-Rust/src/sql/: import.sql
docs/: location-presence-sharing.md  sqlx-executor-pattern.md  streaming-migration-frontend.md  streaming-sequencing.md
migrations/: 20251026141354_create_initial_tables.down.sql  20251026141354_create_initial_tables.up.sql  20251206120035_create_user_relation.down.sql  20251206120035_create_user_relation.up.sql  20260518120000_create_chat_message.down.sql  20260518120000_create_chat_message.up.sql  20260519120000_alter_preview_text_to_jsonb.down.sql  20260519120000_alter_preview_text_to_jsonb.up.sql  20260622120000_drop_participant_state.down.sql  20260622120000_drop_participant_state.up.sql
sql/: import.sql
src/: errors.rs  lib.rs  main.rs  router.rs  utils.rs  welcome.rs
src/api/: errors.rs  messages.rs  mod.rs  notifications.rs  request_handler.rs  rooms.rs  router.rs  timeline.rs  utils.rs
src/auth/: action.rs  decode.rs  error.rs  extract.rs  instance.rs  layer.rs  mod.rs  oidc_discovery.rs  service.rs
src/broadcast/: event_broadcast.rs  mod.rs  notification.rs
src/cache/: cache_cleanup.rs  mod.rs  redis_cache.rs  redis_subscriber.rs  util.rs
src/core/: app_state.rs  config.rs  (+3 more)
(+77 files in other folders)
