[package]
name = "ism"
version = "0.7.0"
edition = "2024"

[dependencies]
log = "0.4.28"
axum = { version = "0.8.6", features = ["multipart"] }
tokio = {version = "1.48.0", features = ["full"]}
tower = "0.5.2"
config = "0.15.18"
serde = "1.0.228"
scylla = { version = "1.3.1", features = ["chrono-04"] }
futures = "0.3.31"
uuid = { version = "1.18.1", features = ["v4", "serde", "v7"] }
chrono = { version = "0.4.42", features = ["serde"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
sqlx = {version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros"]}
dotenv = "0.15.0"
serde_json = "1.0.145"
tokio-stream = { version = "0.1.17", features = ["sync"] }
samsa = "0.1.7"
minio = { version = "0.3.0", features = ["default"] }
image = { version = "0.25.8"}
bytes = "1.10.1"
base64 = "0.22.1"
validator = { version = "0.20.0", features = ["derive"] }
redis = { version = "1.0.0-rc.3", features = ["tokio-comp", "connection-manager"] }


#keycloak:
atomic-time = "0.1.5"
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
http = "1.3.1"
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }
nonempty = { version = "0.12.0", features = ["std"] }
reqwest = { version = "0.12.24", features = ["json"], default-features = false }
serde-querystring = "0.3.0"
serde_with = "3.15.1"
snafu = "0.8.6"
time = "0.3.41"
try-again = "0.2.2"
typed-builder = "0.23.0"
url = "2.5.7"
async-trait = "0.1.89"
thiserror = "2.0.9"

[features]
default = ["default-tls", "reqwest/charset", "reqwest/http2", "reqwest/macos-system-configuration"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]


[dev-dependencies]
assertr = "0.4.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v7", "serde"] }
sqlx-cli =  { version = "0.8.6", features = ["postgres", "rustls"] }