[package]
name = "ism"
version = "0.8.0"
edition = "2024"

[dependencies]
log = "0.4.33"
axum = { version = "0.8.9", features = ["multipart", "ws"] }
tokio = {version = "1.52.3", features = ["full"]}
tower = "0.5.3"
config = "0.15.24"
serde = "1.0.228"
futures = "0.3.32"
uuid = { version = "1.23.3", features = ["v4", "serde", "v7"] }
chrono = { version = "0.4.45", features = ["serde"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
sqlx = {version = "0.9.0", features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros", "json"]}
dotenvy = "0.15.7"
serde_json = "1.0.150"
tokio-stream = { version = "0.1.18", features = ["sync"] }
rdkafka = { version = "0.39.0", features = ["cmake-build", "tokio"] }
minio = { version = "0.3.0", features = ["default"] }
image = { version = "0.25.10"}
bytes = "1.12.0"
base64 = "0.22.1"
validator = { version = "0.20.0", features = ["derive"] }
redis = { version = "1.2.4", features = ["tokio-comp", "connection-manager"] }
thiserror = "2.0.18"
async-trait = "0.1.89"

#KEYCLOAK:
atomic-time = "0.2.1"
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
http = "1.4.2"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
nonempty = { version = "0.12.0", features = ["std"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde-querystring = "0.3.0"
serde_with = "3.21.0"
snafu = "0.9.1"
time = "0.3.51"
try-again = "0.2.2"
typed-builder = "0.23.2"
url = "2.5.8"


[dev-dependencies]
assertr = "0.6.0"
