[package]
name = "ism"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.11.6"
axum = "0.8.1"
tokio = {version = "1.42.0", features = ["full"]}
tower = "0.5.2"
config = "0.15.4"
serde = "1.0.217"
scylla = { version = "0.15.1", features = ["chrono-04"] }
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
[features]