[package]
name = "ism"
version = "0.2.0"
edition = "2021"

[dependencies]
log = "0.4.22"
axum = "0.8.1"
tokio = {version = "1.42.0", features = ["full"]}
tower = "0.5.2"
config = "0.15.4"
serde = "1.0.217"
scylla = { version = "0.15.1", features = ["chrono-04"] }
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["v4", "serde", "v7"] }
chrono = { version = "0.4.39", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sqlx = {version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono", "uuid"]}
async-trait = "0.1.84"
dotenv = "0.15.0"
serde_json = "1.0.135"
tokio-stream = { version = "0.1.17", features = ["sync"] }

#keycloak:
atomic-time = "0.1.5"
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
http = "1.2.0"
jsonwebtoken = "9.3.0"
nonempty = { version = "0.11.0", features = ["std"] }
reqwest = { version = "0.12.12", features = ["json"], default-features = false }
serde-querystring = "0.2.1"
serde_with = "3.12.0"
snafu = "0.8.5"
time = "0.3.37"
try-again = "0.1.1"
typed-builder = "0.20.0"
url = "2.5.4"


[features]
default = ["default-tls", "reqwest/charset", "reqwest/http2", "reqwest/macos-system-configuration"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]


[dev-dependencies]
assertr = "0.1.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["v7", "serde"] }